# rag-studio

./: .gitignore  package-lock.json  package.json  test_keyword_search.py  test_sparse_vector.py  test_sparse_vector_simple.py  前后端集成说明.md  测试集管理交互重构.md
backend/: .gitignore  BM25_INTEGRATION_OVERVIEW.md  BM25_MODEL_IMPLEMENTATION_SUMMARY.md  MIGRATION_TO_MYSQL.md  MODEL_ARCHITECTURE.md  QUICKSTART_BM25.md  QUICKSTART_检索器评估.md  QUICKSTART_链路测试.md  README.md  README_RETRIEVER_EVAL.md  README_TEST.md  SETUP_BM25_MODEL.md  SUMMARY_检索器评估系统.md  check_implementation.sh  env.example  example_t2ranking_usage.py  pyproject.toml  requirements-311.txt  requirements.txt  run.py  task_executor.py  test_api.py  test_bm25_setup.py  test_new_api.py  test_retriever_eval.py  test_t2ranking_pipeline.py  实施进度_测试管理模块优化.md  检索器评估系统_交付清单.md  测试服务清理建议.md  测试服务重构完成总结.md  测试服务重构完成总结_最终版.md  链路实施总结.md  链路排查_T2Ranking导入.md  链路调试系统_使用说明.md  链路调试系统_实施总结.md  链路调试系统_架构设计.md
backend/app/: __init__.py  config.py  main.py
backend/app/controllers/: __init__.py  debug_pipeline.py  document.py  evaluation.py  knowledge_base.py  new_test_management.py  pipeline.py  retriever_evaluation.py  (+2 more)
backend/migrations/: 001_create_evaluation_tables.py  002_create_new_test_tables.py  003_refactor_test_set_kb_relation.py  004_create_task_queue_table.py  005_create_all_tables.py  006_add_schema_config_to_knowledge_bases.py  007_add_ai_model_config.py
backend/scripts/: download_models.py  migrate_debug_knowledge_bases.py  migrate_json_to_mysql.py  t2ranking_test_set_import.py  test_db_connection.py  test_mysql_setup.py
(+219 files in other folders)
