[project]
name = "rag-studio-backend"
version = "1.0.0"
description = "RAG管理平台后端服务 - 支持云边架构的知识库管理、链路排查和测试评估"
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Web Framework
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings==2.1.0",
    # Database
    "sqlalchemy==2.0.23",
    "pymysql==1.1.0",
    "cryptography==41.0.7",
    # LangChain
    "langchain>=0.1.0,<0.3.0",
    "langchain-community>=0.0.10,<0.3.0",
    # AI & Embeddings
    "ollama==0.1.6",
    # RAG Evaluation
    "ragas==0.1.9",
    "datasets==2.16.1",
    "pandas>=2.1.4,<2.2.0",
    "rapidfuzz>=3.0.0",
    # Vector Databases
    "qdrant-client>=1.14.0",
    # Text Splitter
    "jieba==0.42.1",
    # Utilities
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "httpx==0.25.2",
    "dashtext>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "flake8==6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# uv 索引源配置（使用阿里云镜像源）
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

